improve frontend design

--- a/src/quizCreation/templates/quiz_completion_page.html
+++ b/src/quizCreation/templates/quiz_completion_page.html
@@ -13,7 +13,7 @@
                 <div class="card-header">
 
                     <h3 class="">
-                        Quiz completion page settings
+                    Completion page settings
                     </h3>
                 </div>
                 <hr>
