--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -103,6 +103,10 @@
             :root {
                 --bs-body-bg: #ffffff;
             }
+
+            input {
+                color: #000 !important;
+            }
         </style>
 
         <style>
