--- a/src/templates/home_site2/includes/header.html
+++ b/src/templates/home_site2/includes/header.html
@@ -56,6 +56,11 @@
     :root {
         --bs-body-bg: #ffffff;
     }
+
+    input {
+        color: #000 !important;
+    }
+
 </style>
 
 <!DOCTYPE html>
