--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -13,46 +13,19 @@
             <div class="px-3 my-3">
                 <h5 class"my-3" >Editing: {{user_quiz.name}}</h5>
             </div>
-            <div class="px-3  ">
+            <div class="px-3  text-center">
+                
 
-                <button type="button" class="btn btn-primary site-button m-2" data-toggle="modal" data-target="#exampleModalCenter"><i class="fa fa-plus"></i>  Add quiz page</button>
-                {% comment %} <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'preview_quiz' user_quiz.id %}" type="button" class="btn  mb-2 mr-2">View quiz preview</a> {% endcomment %}
+                <a href="{% url 'quiz_page_add' user_quiz.id %}" type="button" class="btn btn-primary site-button m-2"><i class="fa fa-plus"></i>  Add page</a>
 
-    
+                <hr>
 
-                <div class="modal fade" id="exampleModalCenter">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Add quiz page</h5>
-                                <button type="button" class="close" data-dismiss="modal"><span>×</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form action="{% url 'quiz_page_add' user_quiz.id %}"
-                                      method="POST"
-                                >
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <label class="">Enter a name for your page<span class="required">*</span></label>
-                                        <input type="text" class="form-control" name="name" required maxlength='300' placeholder="Enter name here">
-                                        Note: Name is only shown to you and not displayed to users
-                                    </div>
+                
 
-                                    <div class="text-center">
-                                        <button type="button" class="btn btn-danger light" style="border-radius:0 !important;" data-dismiss="modal">Cancel</button>
-                                        <button type="submit" class="btn btn-primary site-button">Continue</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Open in new tab</a>
+                <a href="{% url 'edit_quiz_completion_page' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Completion page</a>
 
-                <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Link to take quiz</a>
-                <a href="{% url 'edit_quiz_completion_page' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button m-2">Edit quiz end </a>
-
-                <button type="button" class="btn btn-primary site-secondary-button m-2" data-toggle="modal" data-target="#quizSettingsModal">Quiz settings</button>
+                <button type="button" class="btn btn-primary site-secondary-button m-2" data-toggle="modal" data-target="#quizSettingsModal">Settings</button>
 
                 <div class="modal fade" id="quizSettingsModal">
                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -140,7 +113,6 @@
             </div>
             <div class="card-body my-5 pt-2">
                 <div class="" id="Unifinshed">
-                    <h4>Quiz pages</h4>
                     {% if quiz_pages %}
                         {% for page in quiz_pages %}
 
@@ -152,7 +124,7 @@
                             transition: all 0.5s;">
 
 
-                                <div  class="d-flex  flex-wrap py-3 list-row align-items-center mb-2">
+                                <div  class="d-flex  flex-wrap pt-3 pb-0 list-row align-items-center">
 
                                     <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
                                         <div class="list-icon mr-3 mb-3">
@@ -169,8 +141,8 @@
 
 
                                         </div>
-                                        <div class="info ">
-                                            <h4 class=""><p class="text-black">{{page.number}}. {{page.title}}</p></h4>
+                                        <div class="info">
+                                            <h4 class=""><p class="text-black">Page: {{page.number}} </p></h4>
                                             {% comment %} <p>This page will always be shown as it has no conditions attached</p> {% endcomment %}
                                         </div>
                                     </div>
@@ -180,56 +152,53 @@
                                             <span >Edit <i class="fa fa-edit"></i></span>
                                         </a>
 
+                                        
                                         <a href="#" class="mt-3"
                                         hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
                                         hx-target='#pagesList'
                                         hx-swap=outerHTML
-                                        hx-confirm="Are you sure you wish to delete the page {{page.name}}"
+                                        hx-confirm="Are you sure you wish to delete the page {{page.number}}"
                                         >
                                             <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
-                                        </div>
+                                        </a>
+                                    </div>
 
-                                    </a>
-
-                                </div>
-
-
-
-                                <div id="accordion-{{page.id}}" class="accordion  mx-auto my-4 " >
-                                    <div class="accordion__item">
-                                        <div class="accordion__header border-0 collapsed" data-toggle="collapse" data-target="#bordered_collapse{{page.id}}" > <span class="accordion__header--text">View details</span>
-                                            <span class="accordion__header--indicator"></span>
-                                        </div>
-                                        <div id="bordered_collapse{{page.id}}" class="accordion__body collapse" data-parent="#accordion-{{page.id}}" style="">
-                                            <div class="accordion__body--text pb-5">
-
+                                        <div class="d-block   pt-3 pb-0 py-3 w-100">
+                                            <div class="col-12 ">
                                                 {% if page.get_quiz_page_elements %}
-                                                    {% for e in page.get_quiz_page_elements %}
-                                                        <br>
-                                                        {{e.position}}. <strong>
-                                                            {{e.get_element_type.type}}:
-                                                        </strong> 
-                                                        {% if e.get_element_type.element.title %}
-                                                            {{e.get_element_type.element.title}}
+                                                <small>
+                                                    Content: 
+                                                </small>
+                                                {% for e in page.get_quiz_page_elements %}
+                                                    <br>
+                                                    {{e.position}}. <strong>
+                                                        {{e.get_element_type.type}}:
+                                                    </strong> 
+                                                    {% if e.get_element_type.element.title %}
+                                                        {{e.get_element_type.element.title}}
+                                                    {% else %}
+                                                        {% if e.get_element_type.type == 'Text' %}
+                                                        Custom HTML Text   
                                                         {% else %}
-                                                            {% if e.get_element_type.type == 'Text' %}
-                                                            Custom HTML Text   
-                                                            {% else %}
-                                                            No title added to page element
-                                                            {% endif %}
+                                                        No title added to page element
                                                         {% endif %}
-                                                        <br>
-                                                    
-                                                    {% endfor %}
+                                                    {% endif %}
+                                                
+                                                {% endfor %}
                                                 {% else %}
-                                                    No page elements added. Click edit to add an element!
+                                                <div class="my-2 mx-auto text-center w-100">
 
+                                                    
+                                                    No page elements added yet. Click edit to add an element!
+                                                </div>
+                
                                                 {% endif %}
-
                                             </div>
                                         </div>
-                                    </div>
                                 </div>
+
+
+
                             </div>
                         {% endfor %}
                     
@@ -239,7 +208,7 @@
                         <br>
 
 
-                        <button type="button" class="btn btn-primary site-button m-2" data-toggle="modal" data-target="#exampleModalCenter"><i class="fa fa-plus"></i>  Add quiz page</button>
+                        <a href="{% url 'quiz_page_add' user_quiz.id %}" type="button" class="btn btn-primary site-button m-2"><i class="fa fa-plus"></i>  Add page</a>
                     </p>
 
                     <span>
@@ -263,7 +232,7 @@
 
 
 
-                    <button type="button"  class="btn btn-primary site-button " data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+                    <a href="{% url 'quiz_page_add' user_quiz.id %}" type="button" class="btn btn-primary site-button m-2"><i class="fa fa-plus"></i>  Add page</a>
                 </div>
             {% endif %}
         </div>
