--- a/src/quizCreation/templates/quiz_creation/quizes_list.html
+++ b/src/quizCreation/templates/quiz_creation/quizes_list.html
@@ -1,15 +1,15 @@
 {% load static %}
 
-{% if quizes %}
-<div class="text-center">
-    <a style="" href="{% url 'create_quiz' %}" class="btn btn-primary site-button mx-auto float-right my-1">
-        Create <i class="fa fa-plus mx-1"></i>
-    </a>
-</div>
-{% endif %}
 
 <div id="quizesList">
-
+    
+    {% if quizes %}
+    <div class="text-center row">
+        <a style="" href="{% url 'create_quiz' %}" class="btn btn-primary site-button mx-auto float-right mt-3">
+            Create <i class="fa fa-plus mx-1"></i>
+        </a>
+    </div>
+    {% endif %}
     {% if quizes %}
 
 
@@ -55,8 +55,42 @@
                                     <small>
                                         Name:
                                     </small>
-                                    <p class="">{{quiz.name}}</p></h4>
+                                    <p class="">{{quiz.name}} <a type="button" class="" data-toggle="modal" data-target="#editNameModal{{quiz.id}}"><i class="fa fa-edit"></i></a></p>
+                                </h4>
 
+                                <div class="modal fade" id="editNameModal{{quiz.id}}">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Edit name</h5>
+                                                <button type="button" class="close" data-dismiss="modal"><span>×</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form action="" 
+                                                hx-post={% url 'edit_quiz_name' quiz.id %}
+                                                hx-trigger="submit"
+                                                hx-target="#quizesList"
+
+                                                >
+                                                    <label for="
+                                                    ">
+                                                </label>
+                                                    Enter new name
+                                                    <input type="text" class="form-control border-dark my-2" name="name">
+
+
+                                                    
+                                                    <div class="text-center">
+                                                        <button type="button"  id="close{{quiz.id}}" class="btn btn-danger light" data-dismiss="modal">Close</button>
+                                                        <button type="submit" onclick="document.querySelector('#close{{quiz.id}}').click()" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </form>
+                                               
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
 
                             </div>
