--- a/src/quizRender/templates/take_quiz_elements/dropdown.html
+++ b/src/quizRender/templates/take_quiz_elements/dropdown.html
@@ -8,3 +8,8 @@
           {% if answer %}value="{{answer.answer}}"{% endif %}
           id="question_{{element.id}}" name="{{element.id}}" class="form-control my-2 border-dark" placeholder="Enter text here"  style="color: rgb(45, 52, 61);"  cols="30" rows="5" maxlength=2000>
 </textarea>
+
+<select name="" id="">
+
+    <option value=""></option>
+</select>
