--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -50,8 +50,6 @@
                     <div class="modal-dialog" role="document">
                         {% if not element.type == "Image" %}
                             <div class="modal-content" id="editModalContent{{element.element.page_element.id}}">
-
-
                                 <div class="modal-header">
                                     <h5 class="modal-title">Editing {{element.type|lower}}</h5>
                                     <button type="button" class="close" data-dismiss="modal"
@@ -63,7 +61,7 @@
                                       hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                                       hx-post="{% url 'edit_element_title' element.element.page_element.page.quiz.id element.element.page_element.page.id element.element.page_element.id %}"
 
-                                      {% if element.type == "Multiple choice question" or  element.type == 'Single choice question' or element.type == 'Agree disagree table' or element.type == 'Satisfied unsatisfied table' %}
+                                      {% if element.type == "Multiple choice question" or  element.type == 'Single choice question' or element.type == 'Agree disagree table' or element.type == 'Satisfied unsatisfied table' or element.type == "Dropdown" %}
                                           hx-target="#editModalContent{{element.element.page_element.id}}"
                                       {% else %}
                                           hx-target="#page_elements"
@@ -124,7 +122,7 @@
                                         >Cancel</a>
                                         <button
 
-                                            {% if not element.type == "Multiple choice question" and not element.type == "Single choice question" and not element.type == "Agree disagree table" and not element.type == "Satisfied unsatisfied table" %}
+                                            {% if not element.type == "Multiple choice question" and not element.type == "Single choice question" and not element.type == "Agree disagree table" and not element.type == "Satisfied unsatisfied table" and not element.type == "Dropdown" %}
 
                                                 onclick="document.querySelector('#editModal_{{element.element.page_element.id}} > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) > button:nth-child(2)').click()"
                                             {% endif %}
@@ -220,7 +218,6 @@
                                                 {{e.choice}}
                                             </strong>
                                             <br>
-                                            {% if e.is_correct_choice %}(Correct <i class="fa fa-check"></i>){% endif %}
                                         </div>
                                     </li >
                                 {% endfor %}
@@ -245,11 +242,33 @@
                                                 {{e.choice}}
                                             </strong>
                                             <br>
-                                            {% if e.is_correct_choice %}(Correct <i class="fa fa-check"></i>){% endif %}
                                         </div>
                                     </li >
                                 {% endfor %}
                             </ul>
+
+                        {% elif element.type == "Dropdown" %}
+
+                        Question choices:
+                        <br>
+                        <ul class="list-group list-group-horizontal-sm">
+                            {% for e in element.element.get_dropdown_choices %}
+                                <li class="border border-1 p-3 rounded border-dark my-4 mx-3 d-flex"
+                                    style="justify-content: center; align-items: center;max-width:fit-content;">
+                                    <div class="text-center">
+
+                                        <br>
+                                        <strong>
+
+                                            {{e.choice}}
+                                        </strong>
+                                        <br>
+                                    </div>
+                                </li >
+                            {% endfor %}
+                        </ul>
+            
+                    
 
                         {% elif element.type == "Agree disagree table"  or element.type == "Satisfied unsatisfied table" %}
 
@@ -268,7 +287,6 @@
                                                 {% if e.required %}(required){% else %}(optional){% endif %}
                                             </small>
                                             <br>
-                                            {% if e.is_correct_choice %}(Correct <i class="fa fa-check"></i>){% endif %}
                                         </div>
                                     </li >
                                 {% endfor %}
