--- a/src/quizRender/templates/take_quiz_elements/dropdown.html
+++ b/src/quizRender/templates/take_quiz_elements/dropdown.html
@@ -1,15 +1,20 @@
-<textarea 
-          {% if not checked_db %}
+
+<select name="{{element.id}}" id="question_{{element.id}}" >
+    
+    {% for choice in element.get_element_type.element.get_dropdown_choices %}
+    
+    <option value="{{choice.id}}">{{choice.choice}}</option>
+    {% endfor %}
+</select>
+
+
+{% comment %} 
+
+         {% if not checked_db %}
               hx-trigger = 'load'
               hx-swap=outerHTML
               hx-target="#question_{{element.id}}"
               hx-get={% url 'get_value_stored_in_db'  quiz_page.quiz.id element.id response_id %}
           {% endif %}
           {% if answer %}value="{{answer.answer}}"{% endif %}
-          id="question_{{element.id}}" name="{{element.id}}" class="form-control my-2 border-dark" placeholder="Enter text here"  style="color: rgb(45, 52, 61);"  cols="30" rows="5" maxlength=2000>
-</textarea>
-
-<select name="" id="">
-
-    <option value=""></option>
-</select>
+{% endcomment %}
