Add 1 to 10 stars

--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -12,6 +12,7 @@
     <option value="SatisfiedUnsatisfied" id="option_SatisfiedUnsatisfied"></option>
     <option value="ReviewStars" id="option_ReviewStars"></option>
     <option value="Dropdown" id="option_Dropdown"></option>
+    <option value="OneToTen" id="option_OneToTen"></option>
 
 
 </select>
@@ -66,10 +67,6 @@
     </div>
 
 
-
-
-
-
     <div role="button" onclick="SelectDeselect(this);" id="card_MultipleChoice"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=MultipleChoice style="min-width:8rem;border:3px solid white;">
         <div class="text-center py-2">
@@ -91,9 +88,6 @@
             <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
         </div>
     </div>
-
-
-
 
     <div role="button" onclick="SelectDeselect(this);" id="card_CharInput"
          class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=CharInput style="min-width:8rem;border:3px solid white;">
@@ -136,15 +130,30 @@
     </div>
 
     <div role="button" onclick="SelectDeselect(this);" id="card_Dropdown"
-    class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=Dropdown style="min-width:8rem;border:3px solid white;">
-   <div class="text-center py-2">
-       <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Add dropdown</h4>
-       <p class="text-small">Add a simple dropdown</p>
+        class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=Dropdown style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Add dropdown</h4>
+            <p class="text-small">Add a simple dropdown</p>
 
-       <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
-   </div>
-</div>
+            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+        </div>
+    </div>
 
+
+    <div role="button" onclick="SelectDeselect(this);" id="card_OneToTen"
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=OneToTen style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Add one to ten rating</h4>
+            <p class="text-small">Allows users to rate from 1 to 10 using radio buttons</p>
+
+            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+        </div>
+    </div>
+
+
+
+
+{% comment %} End swatches {% endcomment %}
 </div>
 
 <script>
