--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -18,7 +18,7 @@
 
     <div class="row flex-lg-row align-items-center mb-5">
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 mx-auto text-center">
             <h1 class="display-5 fw-bold lh-1 mb-3">
 
                 Create, share and analyze forms, quizes and surveys
@@ -36,12 +36,7 @@
 
         </div>
 
-        <div class="col-10 col-sm-8 col-lg-6 mx-auto ">
-            <img
-                src="{% static 'images/laptop-mockup-quiz-creator.jpg' %}"
-                class="d-block mx-lg-auto img-fluid " alt="quizElements quiz survey creation creator on laptop" loading="lazy"
-                style="max-height:15rem;" >
-        </div>
+    
     </div>
 
 			{% comment %} End main section {% endcomment %} 
