--- a/src/quizRender/templates/quiz_form.html
+++ b/src/quizRender/templates/quiz_form.html
@@ -70,6 +70,8 @@
                     {% include 'take_quiz_elements/satisfied_unsatisfied_table.html' %}
                 {% elif element.get_element_type.type == 'Image'  %}
                     {% include 'take_quiz_elements/Image.html' %}
+                {% elif element.get_element_type.type == 'One to ten'  %}
+                    {% include 'take_quiz_elements/one_to_ten.html' %}
 
 
                 {% endif %}
@@ -93,7 +95,6 @@
                     function setRequired{{element.id}}(){
                         question = document.getElementById('question_{{element.id}}')
                         inputs = question.querySelectorAll('input')
-                        console.log(inputs)
                         for (let i = 0; i < inputs.length; i++) {
                             inputs[i].required = true
                           } 
