Make progress on add video element

--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -13,6 +13,7 @@
     <option value="ReviewStars" id="option_ReviewStars"></option>
     <option value="Dropdown" id="option_Dropdown"></option>
     <option value="OneToTen" id="option_OneToTen"></option>
+    <option value="Video" id="option_Video"></option>
 
 
 </select>
@@ -150,7 +151,15 @@
         </div>
     </div>
 
+    <div role="button" onclick="SelectDeselect(this);" id="card_Video"
+         class="card  mb-0 card_choice border-3 border-white col-12 col-sm-5 " data-option=Video style="min-width:8rem;border:3px solid white;">
+        <div class="text-center py-2">
+            <h4 class="card-title border border-dark border-3 p-3" style="border-color: #1ea7c5 !important">Add video</h4>
+            <p class="text-small">Add a video which users can watch</p>
 
+            <img class="rounded" style="max-width:4rem;max-height:4rem;" src="{{option.option_image_icon.url}}" alt="">
+        </div>
+    </div>
 
 
 {% comment %} End swatches {% endcomment %}
