--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -220,7 +220,7 @@
                                             <br>
                                         </div>
                                     </li >
-                                {% endfor %}
+                                {% endfor %} 
                             </ul>
 
                         {% elif element.type == "Single choice question" %}
@@ -249,24 +249,24 @@
 
                         {% elif element.type == "Dropdown" %}
 
-                        Question choices:
-                        <br>
-                        <ul class="list-group list-group-horizontal-sm">
-                            {% for e in element.element.get_dropdown_choices %}
-                                <li class="border border-1 p-3 rounded border-dark my-4 mx-3 d-flex"
-                                    style="justify-content: center; align-items: center;max-width:fit-content;">
-                                    <div class="text-center">
+                            Question choices:
+                            <br>
+                            <ul class="list-group list-group-horizontal-sm">
+                                {% for e in element.element.get_dropdown_choices %}
+                                    <li class="border border-1 p-3 rounded border-dark my-4 mx-3 d-flex"
+                                        style="justify-content: center; align-items: center;max-width:fit-content;">
+                                        <div class="text-center">
 
-                                        <br>
-                                        <strong>
+                                            <br>
+                                            <strong>
 
-                                            {{e.choice}}
-                                        </strong>
-                                        <br>
-                                    </div>
-                                </li >
-                            {% endfor %}
-                        </ul>
+                                                {{e.choice}}
+                                            </strong>
+                                            <br>
+                                        </div>
+                                    </li >
+                                {% endfor %}
+                            </ul>
             
                     
 
@@ -301,6 +301,12 @@
                                 </center>
                             </div>
 
+                        {% elif element.type == "Video" %}
+
+                        {% if element.element.video %}
+                        <video src="{{element.element.video.url}}" style="width:100%;height:auto" controls></video>
+                        {% endif %}
+                        
                         {% endif %}
 
 
