--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -147,14 +147,7 @@
                                         </a>
 
                                         
-                                        <a href="#" class="mt-3"
-                                        hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
-                                        hx-target='#pagesList'
-                                        hx-swap=outerHTML
-                                        hx-confirm="Are you sure you wish to delete the page {{page.number}}"
-                                        >
-                                            <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
-                                        </a>
+                              
                                     </div>
 
                                         <div class="d-block   pt-3 pb-0 py-3 w-100">
@@ -189,6 +182,15 @@
                                                 {% endif %}
                                             </div>
                                         </div>
+
+                                        <a href="#" class="mt-3 float-right ml-auto p-4"
+                                        hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
+                                        hx-target='#pagesList'
+                                        hx-swap=outerHTML
+                                        hx-confirm="Are you sure you wish to delete the page {{page.number}}"
+                                        >
+                                            <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
+                                        </a>
                                 </div>
 
 
