--- a/src/quizCreation/templates/element_forms/Video.html
+++ b/src/quizCreation/templates/element_forms/Video.html
@@ -55,7 +55,8 @@
                 </div>
 
             {% elif element.type == "Youtube" %}
-            TEST
+            Current video
+            <iframe style="width:100%;height:auto" src="{{element.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
             {% endif %}
 
