--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -167,7 +167,8 @@
                                                         {% if e.get_element_type.type == 'Text' %}
                                                         Custom HTML Text   
                                                         {% else %}
-                                                        No title added to page element
+
+                                                        {% comment %} No title added to page element {% endcomment %}
                                                         {% endif %}
                                                     {% endif %}
                                                 
