--- a/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/single_choice_input_element.html
@@ -1,10 +1,12 @@
+{% if element.get_element_type.element.get_single_choice_choices %}
+
 <div
     {% if not checked_db %}
         hx-trigger = 'load'
         hx-swap=outerHTML
         hx-get={% url 'get_value_stored_in_db'  quiz_page.quiz.id element.id response_id%}
     {% endif %}
->
+    >
 
 
     <select  style="opacity:0; position:fixed;"
@@ -112,4 +114,6 @@
     </script>
 
 </div>
+
+{% endif %}
 
